--- a/views/guardianMetricBarCharts.ejs
+++ b/views/guardianMetricBarCharts.ejs
@@ -11,13 +11,13 @@
 </head>
 
 <body>
+  <button id="buttonHome"><a href="/">Home</a></button>
+
   <h1><span id="providerTitle">The Guardian</span> Ranking by Individual Scoring Metric</h1>
 
-  <div id="menus">
+  <div id="menu">
     <label for="metricMenu">Select Scoring Metric:</label>
-
-    <select id='metricDropDown' name="metricMenu">
-    </select>
+    <select id='metricDropDown' name="metricMenu"></select>
   </div>
 
   <svg id="chart" height="780" width="1620"></svg>
