--- a/views/timesMetricBarCharts.ejs
+++ b/views/timesMetricBarCharts.ejs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+  <button id="buttonHome"><a href="/">Home</a></button>
+
   <h1><span id="providerTitle">The Sunday Times</span> Ranking by Individual Scoring Metric</h1>
 
   <div id="menus">
