--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <button id="buttonHome"><a href="/">Home</a></button>
+
   <h1><span id="providerTitle">The Sunday Times </span>Overall Ranking</h1>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
