--- a/public/css/guardianDefault.css
+++ b/public/css/guardianDefault.css
@@ -34,3 +34,12 @@ div.tooltip {
 #data{
   display: none;
 }
+#buttonHome {
+  color: #bf2020;
+  background: #ffffff;
+  padding: 15px;
+  border: 4px solid #bf2020;
+  border-radius: 6px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
+}
