--- a/public/css/guardianParallelPlot.css
+++ b/public/css/guardianParallelPlot.css
@@ -28,6 +28,15 @@ div.tooltip {
 #data{
   display: none;
 }
+#buttonHome {
+  color: #bf2020;
+  background: #ffffff;
+  padding: 15px;
+  border: 4px solid #bf2020;
+  border-radius: 6px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
+}
 
 #buttonPannel{
   margin-top: 10px;
