--- a/public/css/timesParallelPlot.css
+++ b/public/css/timesParallelPlot.css
@@ -29,6 +29,16 @@ div.tooltip {
   display: none;
 }
 
+#buttonHome {
+  color: #bf2020;
+  background: #ffffff;
+  padding: 15px;
+  border: 4px solid #bf2020;
+  border-radius: 6px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
+}
+
 #buttonPannel{
   margin-top: 10px;
   margin-left: auto;
