--- a/views/completeUniMetricBarCharts.ejs
+++ b/views/completeUniMetricBarCharts.ejs
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <button id="buttonHome"><a href="/">Home</a></button>
   <h1><span id="providerTitle">The Complete University Guide</span> Ranking by Individual Scoring Metric</h1>
 
   <div id="menus">
