--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -54,10 +54,9 @@
     .attr("class", "tooltip")
     .style("opacity", 0);
 
-  //Click Handler
+  //ClickHandler to toggle highlighted class
   function handleClick(d, i) {
     d3.select(this).classed("highlighted", !d3.select(this).classed("highlighted"));
-    console.log(d.class);
   }
 
   //Helper objects used to make code more ledgible & easier to maintain
