added custom new font to home

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,10 @@ body
     padding: 0;
 }
 
+p{
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
 #headerWrapper {
   margin: 0 auto;
   width: 100%;
