--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Hompage Ranking Data App</title>
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  <!-- All commentents are bootstrap imports dependencies for it to work, not yet implemented
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/css/home.css">
 
@@ -16,8 +17,8 @@
     <h1 id=headerWrapper__header>UK University Ranking Data Comparison App</h1>
   </div>
   <div id=descWrapper>
-    <p id=descWrapper__p>Select a university ranking dataset to view or select a comparison overview of all
-      three league tables</p>
+    <p id=descWrapper__p>Select a university ranking dataset to view or select a comparison overview of all three league
+      tables</p>
   </div>
 
   <div id=cards>
@@ -43,7 +44,7 @@
       </a>
     </div>
     <div class=card>
-      <div class=card__imgWrapper>
+      <div id=CUGWrapper class=card__imgWrapper >
         <a href="/completeUniPCP"> <img src="res/CUGLogo.png" alt="TheSundayTimes" width=200px;> </a>
       </div>
       <a href="/completeUniPCP">
