added default.css for site-wide fonts

--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -4,6 +4,7 @@
 
 </style>
 <script src="//d3js.org/d3.v3.min.js"></script>
+<link rel="stylesheet" href="/css/defaults.css">
 <link rel="stylesheet" href="/css/completeUniParallelPlot.css">
 
 <body>
