--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,8 @@
   <!-- All commentents are bootstrap imports dependencies for it to work, not yet implemented
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-  <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/defaults.css">
+    <link rel="stylesheet" href="/css/home.css">
 
 </head>
 
