--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewpofacert" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %></title>
   <script src="//d3js.org/d3.v3.min.js"></script>
+  <link rel="stylesheet" href="/css/defaults.css">
   <link rel="stylesheet" href="/css/timesParallelPlot.css">
 </head>
 
