reconfig for guardian + comparison pages

--- a/views/comparison.ejs
+++ b/views/comparison.ejs
@@ -21,8 +21,8 @@
 
   <svg id="parallelChart" height="1080" width="1800"></svg>
 
-  <div id="guardian" data-xaxis="<%= passedUniData %>"></div>
-  <div id="completeUni" data-xaxis="<%= completeUniData %>"></div>
+  <div id="guardian" data-xaxis="<%= dataSet1 %>"></div>
+  <div id="completeUni" data-xaxis="<%= dataSet2 %>"></div>
 </body>
 
 <script>
