--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -18,7 +18,7 @@
   <svg id="parallelChart" height="780" width="1800"></svg>
 
   <div id="buttonPannel">
-    <button><a href="/guardianBar">View Metrics in Detail</a></button>
+    <button><a href="/guardian/byMetric">View Metrics in Detail</a></button>
   </div>
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
