--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,8 @@
   <!-- All commentents are bootstrap imports dependencies for it to work, not yet implemented
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/css/defaults.css">
-    <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/defaults.css">
+  <link rel="stylesheet" href="/css/home.css">
 
 </head>
 
@@ -25,9 +25,9 @@
   <div id=cards>
     <div class=card>
       <div class=card__imgWrapper>
-        <a href="/guardianPCP"> <img src="res/theGuardianLogo.png" alt="TheGuardian" width=200px;> </a>
+        <a href="/guardian/overview"> <img src="res/theGuardianLogo.png" alt="TheGuardian" width=200px;> </a>
       </div>
-      <a href="/guardianPCP">
+      <a href="/guardian/overview">
         <button id=guardianButton>
           <p class=cards__card__text>The Guardian Ranking Data</p>
         </button>
@@ -45,7 +45,7 @@
       </a>
     </div>
     <div class=card>
-      <div id=CUGWrapper class=card__imgWrapper >
+      <div id=CUGWrapper class=card__imgWrapper>
         <a href="/completeUniPCP"> <img src="res/CUGLogo.png" alt="TheSundayTimes" width=200px;> </a>
       </div>
       <a href="/completeUniPCP">
