--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,9 +36,9 @@
     </div>
     <div class=card>
       <div class=card__imgWrapper>
-        <a href="/timesPCP"> <img src="res/theSundayTimesLogo.png" alt="TheSundayTimes" width=200px;> </a>
+        <a href="/sundayTimes/overview"> <img src="res/theSundayTimesLogo.png" alt="TheSundayTimes" width=200px;> </a>
       </div>
-      <a href="/timesPCP">
+      <a href="/sundayTimes/overview">
         <button id=sundayTimesButton>
           <p class=cards__card__text>The Sunday Times Ranking Data</p>
         </button>
@@ -46,9 +46,9 @@
     </div>
     <div class=card>
       <div id=CUGWrapper class=card__imgWrapper>
-        <a href="/completeUniPCP"> <img src="res/CUGLogo.png" alt="TheSundayTimes" width=200px;> </a>
+        <a href="/CUG/overview"> <img src="res/CUGLogo.png" alt="TheSundayTimes" width=200px;> </a>
       </div>
-      <a href="/completeUniPCP">
+      <a href="/CUG/overview">
         <button id=CUGButton>
           <p class=cards__card__text>The Complete University Guide</p>
         </button>
