--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -14,9 +14,7 @@
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
-  <div id="buttonPannel">
-    <button id ="buttonDetail"><a href="/completeUniBar">View Metrics in Detail</a></button>
-  </div>
+  <button id="button_BarChart"><a href="/CUG/byMetric">View Metrics in Detail</a></button>
 
 </body>
 
