--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -17,9 +17,8 @@
 
   <svg id="parallelChart" height="780" width="1800"></svg>
 
-  <div id="buttonPannel">
-    <button><a href="/guardian/byMetric">View Metrics in Detail</a></button>
-  </div>
+  <button id="button_BarChart"  width="1800"><a href="/guardian/byMetric">View Metrics in Detail</a></button>
+
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 </body>
@@ -31,6 +30,7 @@
   uniData = JSON.parse(uniData);
 
   //set SVG selection & get SVG height & width
+  const button_BarChart = d3.select('#button_BarChart');
   const svg = d3.select('#parallelChart');
   const svgHeight = parseFloat(svg.attr('height'));
   const svgWidth = parseFloat(svg.attr('width'));
@@ -48,6 +48,9 @@
   //Move innerVis by top & left margin
   const innerVis = svg.append('g')
     .attr('transform', `translate(${margin.left}, ${margin.top})`);
+
+    const button = button_BarChart.append('g')
+    .attr('transform', `translate(${margin.left})`);
 
   //Create div for tooltip
   let div = d3.select("body")
