--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -17,9 +17,7 @@
 
   <svg id="parallelChart" height="780" width="1800"></svg>
 
-  <div id="buttonPannel">
-    <button><a href="/sundayTimes/byMetric">View Metrics in Detail</a></button>
-  </div>
+  <button id="button_BarChart"><a href="/sundayTimes/byMetric">View Metrics in Detail</a></button>
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 </body>
