--- a/views/comparison.ejs
+++ b/views/comparison.ejs
@@ -15,7 +15,7 @@
   <h1>Comparison Rankings</h1>
 
   <div id="menuContainer">
-    <label for="universityMenu">Select A University:</label>
+    <label for="universityMenu">Select a University:</label>
     <select id='universityDropDown' name="universityMenu"></select>
   </div>
 
