--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -74,7 +74,7 @@
     if (dimension === "name") {
       return false
     }
-    if (dimension.includes("rank") || dimension.includes("Ratio")) {
+    if (dimension.includes("rank") || dimension.includes("ratio")) {
       yRange = [0, height];
     }
     return (y[dimension] = d3.scale.linear()
