fixed comparison img

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,7 +56,7 @@
     </div>
     <div class=card>
       <div class=card__imgWrapper>
-        <a href="/comparison"> <img src="res/comparisonLogo.png" alt="TheCompleteUniversityGuide" width=200px;> </a>
+        <a href="/comparison"> <img src="res/dataComparisonLogo.png" alt="TheCompleteUniversityGuide" width=200px;> </a>
       </div>
       <a href="/comparison">
         <button>
